# fifteen

./: ,gitignore  .gitignore  CMakeLists.txt  README.MD
.github/workflows/: build-release.yml  cmake-multi-platform.yml
assets/: assets.qrc  icon.rc
src/: controller.h  main.cpp  model.h  view.h
